blog_post_manager_app/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blog-api
  labels:
    name: blog-api
    environment: production
