blog_post_manager_app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-api
  namespace: blog-api
  labels:
    app: blog-api
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    app: blog-api
  sessionAffinity: None
